
  - The ``autodoc_skip_member`` event now also gets to decide
    whether to skip members whose name starts with underscores.
    Previously, these members were always automatically skipped.
    Therefore, if you handle this event, add something like this
    to your event handler to restore the old behavior::

       if name.startswith('_'):
           return True

* Theming support.

* Markup:

  - Due to popular demand, added a ``:doc:`` role which directly
    links to another document without the need of creating a
    label to which a ``:ref:`` could link to.

  - #4: Added a ``:download:`` role that marks a non-document file
    for inclusion into the HTML output and links to it.

  - The ``literalinclude`` directive now supports several more
    options, to include only parts of a file.

  - The ``toctree`` directive now supports a ``:hidden:`` flag,
    which will prevent links from being generated in place of
    the directive -- this allows you to define your document
    structure, but place the links yourself.

  - Image paths can now be absolute (like ``/images/foo.png``).
    They are treated as relative to the top source directory.

  - #52: There is now a ``hlist`` directive, creating a compact
    list by placing distributing items into multiple columns.

  - #77: If a description environment with info field list only
    contains one ``:param:`` entry, no bullet list is generated.

  - #6: Don't generate redundant ``<ul>`` for top-level TOC tree
    items, which leads to a visual separation of TOC entries.

  - #23: Added a ``classmethod`` directive along with ``method``
    and ``staticmethod``.

  - Scaled images now get a link to the unscaled version.

  - SVG images are now supported in HTML (via ``<object>`` and
    ``<embed>`` tags).

  - Added a ``toctree`` callable to the templates, and the ability
    to include external links in toctrees. The 'collapse' keyword
    argument indicates whether or not to only display subitems of