@@ -11,6 +11,7 @@ Other contributors, listed alphabetically, are:
 * Martin Hans -- autodoc improvements
 * Dave Kuhlman -- original LaTeX writer
 * Thomas Lamb -- linkcheck builder
+* Will Maier -- directory HTML builder
 * Benjamin Peterson -- unittests
 * Stefan Seefeld -- toctree improvements
 * Antonio Valentino -- qthelp builder
